[package]
name = "quinn-repro"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
futures-util = "0.3"
quinn = { version = "0.7", default-features = false, features = ["tls-rustls"] }
rcgen = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-appender = "0.1"
tracing-subscriber = { version = "0.2", default-features = false, features = [
    "chrono",
    "fmt",
    "parking_lot",
    "smallvec",
    "tracing-log",
] }
